Squashed bugs... for super earth